css/style.css
/* ... */
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    transition: scroll 0.5s;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
   
}

body {
    background-color: var(--color-zinc-50);
    width: 100vw;
    overflow-x: hidden;
}

nav {
    box-shadow: 3px 3px 15px 1px rgba(0, 0, 0, 0.2);
    /* display: none; */
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 10;
    background-color: var(--color-zinc-100);

}

nav .logo{
    flex-basis: 80px;
}

nav .logo svg{
    text-align: center;
    height: 75px;
    padding: 5px;
    stroke: none;
    fill: var(--color-cyan-700);
    filter: drop-shadow(0px 0px 1px #fff);
    z-index: 100;
    transition: 0.5s;
}

svg {
    height: 100%;
    width: 100%;
    position: relative;
}

@media (max-width: 1279px) {
nav .nav-menu{
    display: flex;
    flex-direction: column;
    justify-content: center;

    /* fix for browser that doesn't support clip-path (e.g. iPhone 6) */
    height: 3em;
    width: 3em;
    right:0;
    top: 0;

    position: fixed;
    text-align: center;
    background-color: var(--color-zinc-900);
    clip-path: circle(10% at 90% 10%);
    transition: 0.3s ease-out;
    opacity: 0;
    z-index: 1; 
}

nav .nav-menu li{
    transform: scale(0.2) translate(45em, -70em);
    line-height: 0em;
    transition: 0.3s ease-out;
    list-style: none;
}

nav .nav-menu a{
    display: block;
    text-decoration: none;
    font-size: 2rem;
    padding: 0.5em 0;
    color: var(--color-zinc-300);
    transition: 0.3s ease-out;
}

nav .nav-menu a:hover{
    transform:scale(1.1);
    text-decoration: underline;
}


    
    nav .toggle-menu{
        position: fixed;
        display: block;
        top: 1em;
        right: 1em;
        height: 3em;
        width: 3em;
        padding: 0.5em;
        border-radius: 10px;
        z-index: 1000;
    }

    /* toggle-Menu SVG.active animation */
    #menu-toggle-svg .top-line,
    #menu-toggle-svg .middle-line,
    #menu-toggle-svg .bottom-line{
        stroke: var(--color-zinc-900);
        transition: 0.5s;
    }

    #menu-toggle-svg.active .top-line,
    #menu-toggle-svg.active .bottom-line{
        stroke: var(--color-zinc-300);
    }
    #menu-toggle-svg.active .top-line{
        transform: rotateZ(45deg) translate(5.5%, -8%) scaleX(1.3);
    }

    #menu-toggle-svg.active .middle-line{
        opacity: 0;
    }

    #menu-toggle-svg.active .bottom-line{
        transform: rotateZ(-45deg) translate(-63%, -20.5%) scaleX(1.3);
    }



    /* Navbar Mobile Active*/

    nav.active .logo svg{
        transform: translateY(90%);
    }

    nav.active .nav-menu {
        clip-path: circle(100%);
        height: 100vh;
        width: 100vw;
        opacity: 0.95;
    }
    nav.active .nav-menu li{
        transform: inherit;
        line-height: inherit;
    }
}
/* Welcome Section */

#welcome-section {
    max-width: 100vw;
    background-color: var(--color-zinc-100);
    height: 100vh;
}

#welcome-section .welcome-text{
    font-family: 'Playfair Display', serif;
    position: relative;
    top: 30vh;
}

#welcome-section h1{
    font-size: 3rem;
    text-align: center;
    color: var(--color-zinc-800);
    text-shadow: 3px 3px 16px rgba(255, 255,255, 1);
}
#welcome-section h1::before{
    content: "Hi, I'm";
    font-size: 0.5em;
    top: -1.7em;
    left: 1.5em;
    position: relative;
    color: var(--color-zinc-600);
}

#welcome-section p{
    left: 50vw;
    width: 50%;
    color: var(--color-zinc-700);
    position: relative;
    font-size: 1.5rem;
    text-align: left;
}

#welcome-section p:after{
    content: "Designer, Developer, Dreamer";
    animation: typing 5s infinite ;
    color: var(--color-yellow-400);
}

@keyframes typing {
    0% {content: "";}
    2% {content: "D";}
    4% {content: "De";}
    8% {content: "Des";}
    10% {content: "Desi";}
    12% {content: "Desig";}
    14% {content: "Design";}
    26% {content: "Designer";}
    28% {content: "Designe";}
    29% {content: "Design";}
    30% {content: "Desig";}
    31% {content: "Desi";}
    32% {content: "Des";}
    33% {content: "De";}
    34% {content: "D";}
    36% {content: "De";}
    38% {content: "Dev";}
    40% {content: "Deve";}
    42% {content: "Devel";}
    44% {content: "Develo";}
    46% {content: "Develop";}
    48% {content: "Develope";}
    62% {content: "Developer";}
    64% {content: "Develope";}
    65% {content: "Develop";}
    66% {content: "Develo";}
    67% {content: "Devel";}
    68% {content: "Deve";}
    69% {content: "Dev";}
    70% {content: "De";}
    71% {content: "D";}
    73% {content: "Dr";}
    75% {content: "Dre";}
    77% {content: "Drea";}
    79% {content: "Dream";}
    81% {content: "Dreame";}
    93% {content: "Dreamer";}
    95% {content: "Dreame";}
    96% {content: "Dream";}
    97% {content: "Drea";}
    98% {content: "Dre";}
    99% {content: "Dr";}
    100% {content: "D";}    
}

/* I should use SVG here, maybe I will update in future */
#welcome-section .ws-graphics-main,
#welcome-section .ws-graphics-main::before,
#welcome-section .ws-graphics-main::after{
    display: block;
    position: absolute;
    margin: auto;
    background-color: var(--color-cyan-700);
    top: 25vh;
    bottom: 25vh;
    left: 25vw;
    right: 25vw;
    width: 50vw;
    height: 50vh;
    max-width: 400px;
    border-radius: 2em;
    transform: skew(-10deg);
    transition: 1s;
    opacity: 0.7;
}
#welcome-section .ws-graphics-main::before{
    content: "";
    background-color: var(--color-yellow-100);
    width: 50%;
    height: 50%;
    transform: translate(-150%, -90%);
    transition: 1s;


}
#welcome-section .ws-graphics-main::after{
    content: "";
    background-color: var(--color-indigo-600);
    width: 50%;
    height: 50%;
    transform: translate(50%, 90%);
    transition: 1s;

}

#projects {
    background-color: var(--color-indigo-100);
    padding-bottom: 2em;
}
/* ... */

